--- a/base/fluentbit-ds.yml
+++ b/base/fluentbit-ds.yml
@@ -51,6 +51,7 @@ spec:
         k8s-app: fluentd-logging
         version: v1
     spec:
+      serviceAccountName: fluentd-service-account
       tolerations:
       - key: node-role.kubernetes.io/control-plane
         effect: NoSchedule
