--- a/base/fluentbit-ds.yml
+++ b/base/fluentbit-ds.yml
@@ -5,12 +5,11 @@ metadata:
   name: fluentd-service-account
   namespace: kube-system
 ---
-# define role
+# define clusterrole
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
-  name: fluentd-role
-  namespace: kube-system
+  name: fluentd-clusterrole
 rules:
   - apiGroups: [""]
     resources: ["pods"]
@@ -18,17 +17,16 @@ rules:
 ---
 # define rolebinding
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: fluentd-role-binding
-  namespace: kube-system
 subjects:
     - kind: ServiceAccount
       name: fluentd-service-account
       namespace: kube-system
 roleRef:
-    kind: Role
-    name: fluentd-role
+    kind: ClusterRole
+    name: fluentd-clusterrole
     apiGroup: rbac.authorization.k8s.io
 ---
 # fluentbit standard config
